[gd_scene load_steps=5 format=3 uid="uid://bje1dduc01l8y"]

[ext_resource type="PackedScene" uid="uid://crkhr17vym7rk" path="res://dungeon generation/Models/basic_door_no_mat.glb" id="1_ccx2p"]
[ext_resource type="Script" path="res://dungeon generation/DunCellBasicNoMat.gd" id="1_o0fhe"]
[ext_resource type="PackedScene" uid="uid://ctqwo8n87hvn2" path="res://dungeon generation/Models/wall.glb" id="2_06oef"]
[ext_resource type="PackedScene" uid="uid://cryhkke3by2g5" path="res://dungeon generation/Models/basic_floor_no_mat.glb" id="2_u0ye8"]

[node name="DunCellBasicNoMat" type="Node3D"]
script = ExtResource("1_o0fhe")

[node name="wall_right" parent="." instance=ExtResource("2_06oef")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="wall_left" parent="." instance=ExtResource("2_06oef")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)

[node name="wall_up" parent="." instance=ExtResource("2_06oef")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)

[node name="floor" parent="." instance=ExtResource("2_u0ye8")]

[node name="door_down" parent="." instance=ExtResource("1_ccx2p")]

[node name="door_right" parent="." instance=ExtResource("1_ccx2p")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="door_up" parent="." instance=ExtResource("1_ccx2p")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)

[node name="door_left" parent="." instance=ExtResource("1_ccx2p")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)

[node name="wall_down" parent="." instance=ExtResource("2_06oef")]
